# CrucibleAI

./: .gitignore  Cargo.toml  Readme.md  docker-compose.yml
app/: Dockerfile  Readme.md
backend/: .dockerignore  Cargo.toml  Dockerfile  Readme.md
backend/Template/: ServerTemplate.rs  Template.toml
backend/src/: main.rs
backend/src/api/: call_req.rs
backend/src/helper/: command_line.rs  general.rs
backend/src/models/: mod.rs
backend/src/models/agent_basic/: basic_agent.rs  basic_traits.rs  mod.rs
backend/src/models/agent_manager/: managing_agent.rs
backend/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
backend/src/models/general/: llm.rs
src/: main.rs
src/helper/: command_line.rs  general.rs
src/models/general/: llm.rs
